--- a/Savio/ProgressView/GroupCircularProgressView.xib
+++ b/Savio/ProgressView/GroupCircularProgressView.xib
@@ -14,39 +14,23 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="160"/>
+            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view tag="1" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="wJN-Ge-eB3" customClass="KDCircularProgress" customModule="Savio" customModuleProvider="target">
-                    <rect key="frame" x="200" y="-20" width="200" height="200"/>
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                     <subviews>
                         <view tag="2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Mf-lu-a8L">
-                            <rect key="frame" x="50" y="50" width="100" height="100"/>
+                            <rect key="frame" x="50" y="55" width="500" height="490"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" tag="4" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oRm-Zv-QiR">
-                                    <rect key="frame" x="0.0" y="60" width="100" height="30"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="30" id="L8N-Bu-I6Z"/>
-                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="Lul-pv-sVa"/>
-                                        <constraint firstAttribute="width" constant="200" id="Tyh-5f-45r"/>
-                                    </constraints>
-                                    <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="13"/>
-                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                    <nil key="highlightedColor"/>
-                                    <variation key="default">
-                                        <mask key="constraints">
-                                            <exclude reference="Lul-pv-sVa"/>
-                                            <exclude reference="Tyh-5f-45r"/>
-                                        </mask>
-                                    </variation>
-                                </label>
                                 <label opaque="NO" userInteractionEnabled="NO" tag="5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VEs-gA-dA9">
-                                    <rect key="frame" x="0.0" y="15" width="100" height="40"/>
+                                    <rect key="frame" x="128" y="195" width="244" height="40"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="128" id="FTs-op-UVl"/>
                                         <constraint firstAttribute="width" constant="200" id="a7M-IB-THI"/>
-                                        <constraint firstAttribute="height" constant="40" id="epS-Jg-aQK"/>
+                                        <constraint firstAttribute="height" constant="40" id="gSv-PW-sKI"/>
+                                        <constraint firstAttribute="width" constant="244" id="jkx-HE-aNq"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="15"/>
                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -58,6 +42,24 @@
                                         </mask>
                                     </variation>
                                 </label>
+                                <label opaque="NO" userInteractionEnabled="NO" tag="4" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oRm-Zv-QiR">
+                                    <rect key="frame" x="128" y="265" width="244" height="30"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="Lul-pv-sVa"/>
+                                        <constraint firstAttribute="width" constant="200" id="Tyh-5f-45r"/>
+                                        <constraint firstAttribute="width" constant="244" id="qhF-Sl-zQu"/>
+                                        <constraint firstAttribute="height" constant="30" id="rlh-XN-2XW"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="13"/>
+                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="Lul-pv-sVa"/>
+                                            <exclude reference="Tyh-5f-45r"/>
+                                        </mask>
+                                    </variation>
+                                </label>
                             </subviews>
                             <constraints>
                                 <constraint firstItem="oRm-Zv-QiR" firstAttribute="top" secondItem="VEs-gA-dA9" secondAttribute="bottom" constant="5" id="0re-wd-Cf5"/>
@@ -65,32 +67,34 @@
                                 <constraint firstAttribute="bottom" secondItem="oRm-Zv-QiR" secondAttribute="bottom" constant="20" id="4az-fT-8V9"/>
                                 <constraint firstItem="oRm-Zv-QiR" firstAttribute="leading" secondItem="3Mf-lu-a8L" secondAttribute="leading" id="57o-OI-3PD"/>
                                 <constraint firstAttribute="bottom" secondItem="oRm-Zv-QiR" secondAttribute="bottom" constant="20" id="9Di-1D-liG"/>
+                                <constraint firstItem="VEs-gA-dA9" firstAttribute="top" secondItem="3Mf-lu-a8L" secondAttribute="top" constant="138" id="CZb-hs-NAT"/>
                                 <constraint firstAttribute="width" constant="100" id="G8e-Bl-UfF"/>
-                                <constraint firstItem="oRm-Zv-QiR" firstAttribute="leading" secondItem="3Mf-lu-a8L" secondAttribute="leading" id="S4N-aH-RiQ"/>
+                                <constraint firstItem="VEs-gA-dA9" firstAttribute="centerX" secondItem="3Mf-lu-a8L" secondAttribute="centerX" id="JJc-Fr-eXR"/>
+                                <constraint firstItem="VEs-gA-dA9" firstAttribute="centerY" secondItem="3Mf-lu-a8L" secondAttribute="centerY" constant="-30" id="Jcq-Ns-Dyb"/>
+                                <constraint firstItem="oRm-Zv-QiR" firstAttribute="top" secondItem="VEs-gA-dA9" secondAttribute="bottom" constant="30" id="KAx-so-oNB"/>
                                 <constraint firstItem="VEs-gA-dA9" firstAttribute="top" secondItem="3Mf-lu-a8L" secondAttribute="top" constant="15" id="T7W-SI-fhi"/>
+                                <constraint firstItem="oRm-Zv-QiR" firstAttribute="centerX" secondItem="3Mf-lu-a8L" secondAttribute="centerX" id="VRf-pZ-dxw"/>
                                 <constraint firstItem="oRm-Zv-QiR" firstAttribute="top" secondItem="VEs-gA-dA9" secondAttribute="bottom" constant="20" id="Wh0-9C-ArJ"/>
                                 <constraint firstAttribute="width" constant="250" id="Xcf-CV-mDi"/>
                                 <constraint firstItem="oRm-Zv-QiR" firstAttribute="top" secondItem="VEs-gA-dA9" secondAttribute="bottom" id="XsG-Wo-7m9"/>
+                                <constraint firstItem="VEs-gA-dA9" firstAttribute="top" secondItem="3Mf-lu-a8L" secondAttribute="top" constant="138" id="a3x-KM-tKL"/>
                                 <constraint firstAttribute="bottom" secondItem="oRm-Zv-QiR" secondAttribute="bottom" constant="20" id="bwE-PL-Vkm"/>
-                                <constraint firstItem="oRm-Zv-QiR" firstAttribute="centerX" secondItem="3Mf-lu-a8L" secondAttribute="centerX" id="dzF-5W-LIs"/>
                                 <constraint firstItem="oRm-Zv-QiR" firstAttribute="top" secondItem="VEs-gA-dA9" secondAttribute="bottom" constant="5" id="eQN-v7-kO1"/>
-                                <constraint firstAttribute="trailing" secondItem="VEs-gA-dA9" secondAttribute="trailing" id="fY9-NI-BRx"/>
-                                <constraint firstAttribute="trailing" secondItem="oRm-Zv-QiR" secondAttribute="trailing" id="fnm-6K-Xrr"/>
-                                <constraint firstItem="VEs-gA-dA9" firstAttribute="top" secondItem="3Mf-lu-a8L" secondAttribute="top" constant="15" id="kOq-gK-zBl"/>
                                 <constraint firstAttribute="height" constant="100" id="me1-lo-dJS"/>
-                                <constraint firstItem="VEs-gA-dA9" firstAttribute="leading" secondItem="3Mf-lu-a8L" secondAttribute="leading" id="n8e-31-0AB"/>
                                 <constraint firstAttribute="width" constant="100" id="nae-VR-Rry"/>
                                 <constraint firstItem="VEs-gA-dA9" firstAttribute="leading" secondItem="3Mf-lu-a8L" secondAttribute="leading" id="p0D-lD-7DL"/>
                                 <constraint firstAttribute="trailing" secondItem="oRm-Zv-QiR" secondAttribute="trailing" id="qpC-bp-DwQ"/>
-                                <constraint firstItem="oRm-Zv-QiR" firstAttribute="top" secondItem="VEs-gA-dA9" secondAttribute="bottom" constant="5" id="tWi-mc-rwG"/>
-                                <constraint firstItem="VEs-gA-dA9" firstAttribute="centerX" secondItem="3Mf-lu-a8L" secondAttribute="centerX" id="xHw-KA-mrw"/>
                             </constraints>
                             <variation key="default">
                                 <mask key="constraints">
                                     <exclude reference="G8e-Bl-UfF"/>
                                     <exclude reference="Xcf-CV-mDi"/>
+                                    <exclude reference="me1-lo-dJS"/>
+                                    <exclude reference="nae-VR-Rry"/>
                                     <exclude reference="4K5-cV-lJn"/>
+                                    <exclude reference="CZb-hs-NAT"/>
                                     <exclude reference="T7W-SI-fhi"/>
+                                    <exclude reference="a3x-KM-tKL"/>
                                     <exclude reference="p0D-lD-7DL"/>
                                     <exclude reference="0re-wd-Cf5"/>
                                     <exclude reference="4az-fT-8V9"/>
@@ -107,8 +111,13 @@
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
+                        <constraint firstAttribute="bottom" secondItem="3Mf-lu-a8L" secondAttribute="bottom" constant="55" id="DFe-YS-fKw"/>
                         <constraint firstAttribute="width" constant="200" id="Jj3-fg-V3c"/>
+                        <constraint firstItem="3Mf-lu-a8L" firstAttribute="top" secondItem="wJN-Ge-eB3" secondAttribute="top" constant="55" id="M19-Ph-IHU"/>
+                        <constraint firstItem="3Mf-lu-a8L" firstAttribute="leading" secondItem="wJN-Ge-eB3" secondAttribute="leading" constant="50" id="YSt-GF-IXR"/>
+                        <constraint firstItem="VEs-gA-dA9" firstAttribute="top" secondItem="wJN-Ge-eB3" secondAttribute="top" constant="193" id="koL-fu-HcO"/>
                         <constraint firstItem="3Mf-lu-a8L" firstAttribute="centerY" secondItem="wJN-Ge-eB3" secondAttribute="centerY" id="ohA-g6-0fd"/>
+                        <constraint firstAttribute="trailing" secondItem="3Mf-lu-a8L" secondAttribute="trailing" constant="50" id="rYx-Pu-jYf"/>
                         <constraint firstAttribute="height" constant="200" id="rhW-AR-Wwh"/>
                         <constraint firstItem="3Mf-lu-a8L" firstAttribute="centerX" secondItem="wJN-Ge-eB3" secondAttribute="centerX" id="vNX-Tz-mqC"/>
                     </constraints>
@@ -123,24 +132,35 @@
                         <userDefinedRuntimeAttribute type="color" keyPath="trackColor">
                             <color key="value" red="0.91764705879999997" green="0.92156862750000001" blue="0.92941176469999998" alpha="1" colorSpace="calibratedRGB"/>
                         </userDefinedRuntimeAttribute>
-                        <userDefinedRuntimeAttribute type="color" keyPath="progressInsideFillColor">
-                            <color key="value" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                        </userDefinedRuntimeAttribute>
                         <userDefinedRuntimeAttribute type="number" keyPath="progressThickness">
                             <real key="value" value="0.40000000000000002"/>
                         </userDefinedRuntimeAttribute>
                         <userDefinedRuntimeAttribute type="number" keyPath="trackThickness">
                             <real key="value" value="0.29999999999999999"/>
                         </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="color" keyPath="IBColor1">
+                            <color key="value" red="0.67843137254901964" green="0.83529411764705885" blue="0.96470588235294119" alpha="1" colorSpace="calibratedRGB"/>
+                        </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="Jj3-fg-V3c"/>
+                            <exclude reference="rhW-AR-Wwh"/>
+                            <exclude reference="koL-fu-HcO"/>
+                        </mask>
+                    </variation>
                 </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="wJN-Ge-eB3" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="byf-ey-pvS"/>
+                <constraint firstAttribute="bottom" secondItem="wJN-Ge-eB3" secondAttribute="bottom" id="dxm-9u-nq4"/>
+                <constraint firstItem="wJN-Ge-eB3" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="f0J-ZK-2a6"/>
                 <constraint firstItem="wJN-Ge-eB3" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="q2X-9u-Xuf"/>
                 <constraint firstItem="wJN-Ge-eB3" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="vhB-5M-eFv"/>
+                <constraint firstAttribute="trailing" secondItem="wJN-Ge-eB3" secondAttribute="trailing" id="zEf-5d-wbO"/>
             </constraints>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="489" y="286"/>
         </view>
     </objects>
 </document>
