--- a/Savio/ProgressView/SAGroupProgressViewController.xib
+++ b/Savio/ProgressView/SAGroupProgressViewController.xib
@@ -23,7 +23,7 @@
                 <outlet property="savingPlanTitleLabel" destination="Rxj-TM-ht8" id="0E5-VJ-Z7Z"/>
                 <outlet property="spendButton" destination="OGV-x5-hXK" id="vk7-1r-eNw"/>
                 <outlet property="statsButton" destination="1lY-ph-r2K" id="kNQ-5m-EPO"/>
-                <outlet property="tblHt" destination="P6A-uP-4hQ" id="tvS-ag-Mmf"/>
+                <outlet property="tblHt" destination="87z-12-CaR" id="Q1y-Ee-1km"/>
                 <outlet property="tblView" destination="Ihf-ot-vbi" id="X4u-VU-2M3"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -128,38 +128,43 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c4S-KN-7rD">
-                                    <rect key="frame" x="0.0" y="20" width="600" height="190"/>
+                                    <rect key="frame" x="0.0" y="20" width="600" height="362"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="190" id="XOO-Gc-ITl"/>
                                     </constraints>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="XOO-Gc-ITl"/>
+                                        </mask>
+                                    </variation>
                                     <connections>
                                         <outlet property="delegate" destination="-1" id="Inx-xE-lRN"/>
                                     </connections>
                                 </scrollView>
                                 <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="gf6-nN-cap">
-                                    <rect key="frame" x="281" y="200" width="39" height="37"/>
+                                    <rect key="frame" x="281" y="370" width="39" height="37"/>
                                     <color key="tintColor" red="0.63137254899999995" green="0.83921568629999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
-                                        <constraint firstAttribute="width" constant="39" id="bxc-EW-XAl"/>
-                                        <constraint firstAttribute="height" constant="37" id="c0m-u8-S0L"/>
+                                        <constraint firstAttribute="height" constant="37" id="JoY-cQ-PtG"/>
+                                        <constraint firstAttribute="width" constant="39" id="gsD-cN-bw1"/>
                                     </constraints>
                                     <color key="pageIndicatorTintColor" red="0.74509803919999995" green="0.74509803919999995" blue="0.74509803919999995" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="currentPageIndicatorTintColor" red="0.63137254899999995" green="0.83921568629999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                                 </pageControl>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Group Members (8)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jc8-Fd-CSw">
-                                    <rect key="frame" x="30" y="236" width="540" height="21"/>
+                                    <rect key="frame" x="30" y="400" width="540" height="21"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="21" id="VO7-se-thu"/>
+                                        <constraint firstAttribute="height" constant="21" id="W23-ZN-F9C"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="14"/>
                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ihf-ot-vbi">
-                                    <rect key="frame" x="0.0" y="265" width="600" height="171"/>
+                                    <rect key="frame" x="0.0" y="424" width="600" height="20"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="171" id="P6A-uP-4hQ"/>
+                                        <constraint firstAttribute="height" constant="20" id="87z-12-CaR"/>
                                     </constraints>
                                     <connections>
                                         <outlet property="dataSource" destination="-1" id="bSN-xX-w5Z"/>
@@ -169,22 +174,24 @@
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstItem="gf6-nN-cap" firstAttribute="top" secondItem="alJ-QQ-JNZ" secondAttribute="top" constant="200" id="3Vx-dX-Enl"/>
-                                <constraint firstItem="c4S-KN-7rD" firstAttribute="top" secondItem="Rxj-TM-ht8" secondAttribute="bottom" id="4ef-df-spo"/>
-                                <constraint firstItem="Jc8-Fd-CSw" firstAttribute="top" secondItem="c4S-KN-7rD" secondAttribute="bottom" constant="26" id="89c-RR-bFx"/>
-                                <constraint firstAttribute="trailing" secondItem="Ihf-ot-vbi" secondAttribute="trailing" id="A0f-HT-7Nq"/>
-                                <constraint firstAttribute="trailing" secondItem="Jc8-Fd-CSw" secondAttribute="trailing" constant="30" id="Aad-EX-UWa"/>
-                                <constraint firstItem="Jc8-Fd-CSw" firstAttribute="leading" secondItem="alJ-QQ-JNZ" secondAttribute="leading" constant="30" id="CYh-xv-wNR"/>
+                                <constraint firstItem="gf6-nN-cap" firstAttribute="centerX" secondItem="alJ-QQ-JNZ" secondAttribute="centerX" id="DJv-40-i6d"/>
                                 <constraint firstItem="Rxj-TM-ht8" firstAttribute="leading" secondItem="alJ-QQ-JNZ" secondAttribute="leading" constant="20" id="DMd-oH-uuv"/>
-                                <constraint firstItem="c4S-KN-7rD" firstAttribute="leading" secondItem="alJ-QQ-JNZ" secondAttribute="leading" id="FaW-Nk-sMq"/>
-                                <constraint firstAttribute="trailing" secondItem="c4S-KN-7rD" secondAttribute="trailing" id="Oa7-QD-0Ta"/>
+                                <constraint firstItem="c4S-KN-7rD" firstAttribute="top" secondItem="alJ-QQ-JNZ" secondAttribute="top" constant="20" id="KqT-kH-iey"/>
+                                <constraint firstItem="c4S-KN-7rD" firstAttribute="leading" secondItem="alJ-QQ-JNZ" secondAttribute="leading" id="Mqf-nw-hP3"/>
+                                <constraint firstItem="Ihf-ot-vbi" firstAttribute="leading" secondItem="alJ-QQ-JNZ" secondAttribute="leading" id="P98-5D-6MP"/>
+                                <constraint firstAttribute="trailing" secondItem="Ihf-ot-vbi" secondAttribute="trailing" id="UWB-xs-JGP"/>
+                                <constraint firstItem="Ihf-ot-vbi" firstAttribute="top" secondItem="Jc8-Fd-CSw" secondAttribute="bottom" constant="3" id="V57-TJ-wHa"/>
+                                <constraint firstItem="c4S-KN-7rD" firstAttribute="top" secondItem="Rxj-TM-ht8" secondAttribute="bottom" id="apf-kq-z7i"/>
+                                <constraint firstAttribute="trailing" secondItem="c4S-KN-7rD" secondAttribute="trailing" id="cnA-4G-Nla"/>
                                 <constraint firstAttribute="trailing" secondItem="Rxj-TM-ht8" secondAttribute="trailing" constant="20" id="dgt-Qf-DZV"/>
                                 <constraint firstAttribute="height" constant="444" id="gqc-Mi-sis"/>
-                                <constraint firstItem="Ihf-ot-vbi" firstAttribute="leading" secondItem="alJ-QQ-JNZ" secondAttribute="leading" id="hfv-kG-POB"/>
-                                <constraint firstItem="Ihf-ot-vbi" firstAttribute="top" secondItem="Jc8-Fd-CSw" secondAttribute="bottom" constant="8" id="kbn-R3-gmW"/>
+                                <constraint firstItem="Jc8-Fd-CSw" firstAttribute="leading" secondItem="alJ-QQ-JNZ" secondAttribute="leading" constant="30" id="jBd-pY-nZd"/>
                                 <constraint firstItem="Rxj-TM-ht8" firstAttribute="top" secondItem="alJ-QQ-JNZ" secondAttribute="top" id="mhJ-aS-s5H"/>
-                                <constraint firstItem="c4S-KN-7rD" firstAttribute="top" secondItem="alJ-QQ-JNZ" secondAttribute="top" constant="20" id="uE0-Fq-mvb"/>
-                                <constraint firstItem="gf6-nN-cap" firstAttribute="centerX" secondItem="alJ-QQ-JNZ" secondAttribute="centerX" id="xTM-HU-mFF"/>
+                                <constraint firstItem="Ihf-ot-vbi" firstAttribute="top" secondItem="Jc8-Fd-CSw" secondAttribute="bottom" constant="3" id="rw7-CC-x2r"/>
+                                <constraint firstAttribute="bottom" secondItem="Ihf-ot-vbi" secondAttribute="bottom" id="s4v-hM-dfI"/>
+                                <constraint firstItem="Ihf-ot-vbi" firstAttribute="top" secondItem="gf6-nN-cap" secondAttribute="bottom" constant="17" id="xJ8-b1-8x2"/>
+                                <constraint firstAttribute="trailing" secondItem="Jc8-Fd-CSw" secondAttribute="trailing" constant="30" id="xW1-Tg-Ngd"/>
+                                <constraint firstItem="Jc8-Fd-CSw" firstAttribute="top" secondItem="c4S-KN-7rD" secondAttribute="bottom" constant="18" id="xhb-gx-4iT"/>
                             </constraints>
                         </view>
                     </subviews>
